DevOps/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Annuity_Manual_Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annuity Manual Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_SF_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact SF External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Manual_Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Manual Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestUpdateField__c</fullName>
        <label>TestUpdateField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <description>block the insertion of a contact if the contact is related to an account and has a mailing postal code different from the account&apos;s shipping postal code</description>
        <errorConditionFormula>AND( 
NOT( ISBLANK( AccountId ) ), 
MailingPostalCode &lt;&gt; Account.ShippingPostalCode 
)</errorConditionFormula>
        <errorMessage>mailing postal code different from the account&apos;s shipping postal code</errorMessage>
    </validationRules>
</CustomObject>